--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-  "name": "material-ui-popup-state",
+  "name": "@hungphongbk/material-ui-popup-state",
   "version": "0.0.0-development",
   "description": "easiest way to create menus, popovers, and poppers with material-ui",
   "main": "index.js",
   "sideEffects": false,
   "scripts": {
-    "lint": "eslint $npm_package_config_eslint",
-    "lint:fix": "eslint --fix $npm_package_config_eslint",
-    "prettier": "prettier --write $npm_package_config_prettier",
-    "prettier:check": "prettier --list-different $npm_package_config_prettier",
     "flow": "flow",
-    "flow:coverage": "for file in src/**.js test/**.js; do echo $file; flow coverage $file; done",
     "clean": "rimraf demo-dist es lib $(cd src; ls) *.js.flow *.d.ts",
     "build": "npm run clean && babel src --out-dir es && flow-copy-source -v src/ es && copy src/**/*.d.ts es && cross-env BABEL_ENV=es5 babel src --out-dir . && flow-copy-source -v src/ . && copy src/**/*.d.ts .",
-    "test": "cross-env NODE_ENV=test BABEL_ENV=es5 mocha $npm_package_config_mocha && cross-env NODE_ENV=test BABEL_ENV=coverage nyc --reporter=lcov --reporter=text mocha $npm_package_config_mocha",
-    "test:watch": "cross-env NODE_ENV=test BABEL_ENV=test mocha --watch $npm_package_config_mocha",
-    "test:debug": "cross-env NODE_ENV=test BABEL_ENV=test mocha --inspect-brk $npm_package_config_mocha",
-    "codecov": "nyc report --reporter=text-lcov > coverage.lcov; codecov",
-    "prepublishOnly": "npm run clean && npm run prettier:check && npm run lint && flow && tsc && npm test && npm run build",
+    "prepublishOnly": "npm run clean && flow && tsc && npm run build",
     "open:coverage": "open coverage/lcov-report/index.html",
     "semantic-release": "semantic-release",
     "start": "webpack-dev-server",
@@ -25,49 +16,21 @@
     "predeploy": "yarn build:demo",
     "deploy": "gh-pages -d demo-dist --dotfiles"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm run lint && flow && tsc",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "npm test"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md,ts}": [
-      "prettier --write"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@jedwards1211/commitlint-config"
-    ]
-  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5"
   },
   "config": {
-    "mocha": "-r @babel/register -r jsdom-global/register test/configure.js 'test/**/*.js'",
-    "eslint": "src test demo --cache",
-    "prettier": "*.{json,md,js} {src,test,demo}/**/*.{js,ts}",
+    "eslint": "src demo --cache",
+    "prettier": "*.{json,md,js} {src,demo}/**/*.{js,ts}",
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
   },
-  "nyc": {
-    "include": [
-      "src/**/*.js"
-    ],
-    "require": [
-      "@babel/register"
-    ],
-    "sourceMap": false,
-    "instrument": false
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jcoreio/material-ui-popup-state.git"
+    "url": "https://github.com/hungphongbk/material-ui-popup-state.git"
   },
   "keywords": [
     "material-ui",
@@ -110,7 +73,6 @@
     "@jedwards1211/eslint-config-react": "^4.0.0",
     "@types/classnames": "^2.2.9",
     "@types/prop-types": "^15.7.3",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-istanbul": "^6.0.0",
@@ -136,8 +98,8 @@
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "raw-loader": "^1.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.3.7",
     "sinon": "^6.1.4",
@@ -148,15 +110,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "@mui/styles": "^5.0.0",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/material": "^5.6.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "@mui/material": "^5.0.0",
-    "react": "^15.0.0 || ^16.0.0 || ^17.0.0"
+    "@mui/material": "^5.6.0",
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "release": {
     "branches": [
